[gd_scene load_steps=4 format=3 uid="uid://da272b3ltngpf"]

[ext_resource type="Script" path="res://anim_tester.gd" id="1_mu5og"]
[ext_resource type="PackedScene" uid="uid://dd5hhdonrol7" path="res://unit_node.tscn" id="2_61ovy"]
[ext_resource type="PackedScene" uid="uid://bbsumiscjy6i2" path="res://defense_animation_controller.tscn" id="3_rettb"]

[node name="anim_tester" type="VBoxContainer"]
offset_right = 45.0
offset_bottom = 71.0
script = ExtResource("1_mu5og")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2

[node name="p" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
mouse_filter = 1

[node name="unit_node" parent="p" instance=ExtResource("2_61ovy")]

[node name="Label" type="Label" parent="p/unit_node"]
offset_left = -32.0
offset_top = -44.0
offset_right = 34.0
offset_bottom = -21.0
text = "Defender"

[node name="center" type="MarginContainer" parent="p"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="unit_node" parent="p/center" instance=ExtResource("2_61ovy")]

[node name="Label" type="Label" parent="p/center/unit_node"]
offset_left = -32.0
offset_top = -44.0
offset_right = 34.0
offset_bottom = -21.0
text = "Attacker"

[node name="anchor" type="MarginContainer" parent="p/center"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "0.00 s"
horizontal_alignment = 1

[node name="controller" type="Node" parent="."]

[node name="anims" parent="controller" instance=ExtResource("3_rettb")]

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="gui_input" from="p" to="." method="_on_p_gui_input"]
